// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatCard should render with many props assigned 1`] = `
<article
  className="FlatCard test-class"
>
  <div
    className="borderContainer"
  >
    <div
      className="header"
    >
      <h1>
        Main heading
      </h1>
      <h6>
        Sub heading
      </h6>
    </div>
    <div
      className="rowCenter"
    >
      <img
        alt="David Molina's face"
        className="image"
        src="https://s3.amazonaws.com/operationcode-assets/headshots/david_molina.jpg"
      />
    </div>
    <hr
      className="divider"
    />
    <div
      className="children"
    >
      <p>
        Example content goes here
      </p>
      <p>
        More content goes here
      </p>
    </div>
  </div>
</article>
`;

exports[`FlatCard should render with required props 1`] = `
<article
  className="FlatCard"
>
  <div
    className="borderContainer"
  >
    <div
      className="rowCenter"
    >
      <img
        alt="David Molina's face"
        className="image"
        src="https://s3.amazonaws.com/operationcode-assets/headshots/david_molina.jpg"
      />
    </div>
    <div
      className="children"
    >
      <p>
        Example content goes here
      </p>
      <p>
        More content goes here
      </p>
    </div>
  </div>
</article>
`;
